--- a/images/att-comdev/minimirror/Jenkinsfile
+++ b/images/att-comdev/minimirror/Jenkinsfile
@@ -17,6 +17,8 @@ IMAGE_LATEST="${ARTF_DOCKER_URL}/${IMAGE_PREFIX}/mini-mirror:latest"
 IMAGE_DOCKER="${ARTF_DOCKER_URL}/${IMAGE_PREFIX}/mini-mirror:${GERRIT_PATCHSET_REVISION}-docker-ubuntu"
 IMAGE_DOCKER_LATEST="${ARTF_DOCKER_URL}/${IMAGE_PREFIX}/mini-mirror:latest"
 
+MINI_MIRROR_LEGACY_COMMIT="e06dfa0189b8c5074c6a96512defde5f59c86aea"
+
 def label = "worker-${UUID.randomUUID().toString()}"
 try {
     podTemplate(label: label,yaml: """
@@ -40,20 +42,12 @@ try {
                     sh "apt-get install sudo make docker.io curl -y"
                 }
                 stage("checkout"){
-                    if("${GERRIT_PROJECT}" == "${MINIMIRROR_PROJECT}" && env.GERRIT_NEWREV){
-                        echo ("${GERRIT_NEWREV} is being used to override refspec: ${GERRIT_REFSPEC}")
-                        gerrit.cloneToBranch("https://opendev.org/openstack/openstack-helm-images",  "${GERRIT_NEWREV}", "${JOB_BASE_NAME}")
-                    }
-                    else if("${GERRIT_PROJECT}" == "${MINIMIRROR_PROJECT}" && GERRIT_EVENT_TYPE != 'change-merged') {
-                        gerrit.cloneToBranch("https://opendev.org/openstack/openstack-helm-images", "${GERRIT_PATCHSET_REVISION}", "${JOB_BASE_NAME}")
-                    }
-                    else {
-                        sh "mkdir -p  ${JOB_BASE_NAME}"
-                        dir("${WORKSPACE}/${JOB_BASE_NAME}") {
-                            git "https://opendev.org/openstack/openstack-helm-images"
-                            sh "git checkout master"
-                        }
-                    }
+                    /* NOTE(drewwalters96): Mini-mirror has a new, breaking
+                       format in OSH images. This ensures the old format is
+                       always used. */
+                    gerrit.cloneToBranch("https://opendev.org/openstack/openstack-helm-images.git",
+                        "${MINI_MIRROR_LEGACY_COMMIT}", "${JOB_BASE_NAME}")
+
                     dir ("minimirror/mini-mirror") {
                         if("${GERRIT_PROJECT}" != "${MINIMIRROR_PROJECT}"){
                             if(GERRIT_EVENT_TYPE == 'change-merged') {
