Pin openstack-helm-images in mini-mirror build
After [0], the mini-mirror image build job will need to be changed
significantly or it will begin to fail, so this change adds a pin to
the mini-mirror build of a known compatible version of
openstack-helm-images.

[0] https: //review.opendev.org/#/c/694173/
Change-Id: Ib368fddfd0de1cb8dc35d406e3b682c0b7069496

--- a/images/att-comdev/minimirror/Jenkinsfile
+++ b/images/att-comdev/minimirror/Jenkinsfile
@@ -9,6 +9,7 @@ VERSION=1.0
 GERRIT_CLONE_URL = "ssh://" + conf.SSH_REPO_USER + "@" + conf.GERRIT_URL
 REFSPEC = "refs/changes/*:refs/changes/*"
 ARTF_PATH = "minimirror/gpgkey-private"
+OSH_IMAGES_STABLE=${OSH_IMAGES_STABLE:-"e06dfa0189b8c5074c6a96512defde5f59c86aea"}
 
 currentBuild.displayName = "#${BUILD_NUMBER} ${GERRIT_EVENT_TYPE}"
 
@@ -51,7 +52,7 @@ try {
                         sh "mkdir -p  ${JOB_BASE_NAME}"
                         dir("${WORKSPACE}/${JOB_BASE_NAME}") {
                             git "https://opendev.org/openstack/openstack-helm-images"
-                            sh "git checkout master"
+                            sh "git reset --hard '${OSH_IMAGES_STABLE}\'"
                         }
                     }
                     dir ("minimirror/mini-mirror") {
