Refactor vm and heat templates to allow use vms via jumphost
Change-Id: Ie55ef259158c709c9e595ea34597c5a98225cd8d

--- a/resources/heat/stack/ubuntu.basic.stack.template.yaml
+++ b/resources/heat/stack/ubuntu.basic.stack.template.yaml
@@ -16,6 +16,13 @@ parameters:
     type: string
     default: m1.large
 
+conditions:
+    add_floatingip:
+      not:
+        equals:
+          - get_param: public_net
+          - ''
+
 resources:
   server:
     type: OS::Nova::Server
@@ -29,7 +36,8 @@ resources:
 
       user_data:
         str_replace:
-          template: {get_file: bootstrap.sh}
+          template:
+            get_file: bootstrap.sh
           params:
             $message: Hello World!
 
@@ -41,6 +49,7 @@ resources:
       security_groups: [jenkins-security]
 
   server_floating_ip:
+    condition: add_floatingip
     type: OS::Neutron::FloatingIP
     properties:
       floating_network:
@@ -50,5 +59,14 @@ resources:
 outputs:
   floating_ip:
     description: The external IP associated to the server
-    value: { get_attr: [server_floating_ip, floating_ip_address] }
-
+    value:
+      if:
+        - add_floatingip
+        - get_attr:
+            - server_floating_ip
+            - floating_ip_address
+        - get_attr:
+            - server_port
+            - fixed_ips
+            - 0
+            - ip_address
